2012-08-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14459]
	* stdlib/strtod_l.c: Include <stdint.h>.
	(NDEBUG): Do not define.
	(round_and_return): Change EXPONENT parameter to type intmax_t.
	Rearrange calculations to avoid internal overflow possibilities.
	(str_to_mpn): Change EXPONENT parameter to type intmax_t *.
	Rearrange calculations to avoid internal overflow possibilities.
	Assert that number fits inside MPNSIZE limbs.
	(____STRTOF_INTERNAL): Change EXPONENT variable to type intmax_t.
	Change DIG_NO, INT_NO and LEAD_ZERO to type size_t.  Rearrange
	calculations and add assertions to avoid internal overflow
	possibilities.  Add casts to avoid signed/unsigned operations.
	* stdlib/tst-strtod-overflow.c: New file.
	* stdlib/Makefile (tests): Add tst-strtod-overflow.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/faccessat.c (faccessat): Call __fxstatat64.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* include/sys/epoll.h: New file.
	* sysdeps/unix/sysv/linux/epoll_pwait.c (epoll_pwait): Mark as
	libc_hidden_def.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/grantpt.c: Use <> brackets for not-cancel.h.

2012-01-29  Chris Metcalf  <cmetcalf@tilera.com>

	* scripts/config.guess: Update from upstream config git repository.
	* scripts/config.sub: Likewise.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* elf/elf.h (EM_TILEPRO, EM_TILEGX): New macros.
	(EM_NUM): Update.
	(R_TILEPRO_*, R_TILEGX_*): New macros.

2012-06-24  Carlos O'Donell  <carlos@systemhalted.org>

	* scripts/list-sources.sh: Scan PORTS for translations.
	* po/libc.pot: Regenerated.

2012-06-13  Carlos O'Donell  <carlos_odonell@mentor.com>

	* po/Makefile (libc.pot): Use UTF-8 charset.

2012-06-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14273]
	* sysdeps/ieee754/dbl-64/wordsize-64/e_cosh.c (__ieee754_cosh):
	Clear sign bit of 64-bit integer value before comparing against
	overflow value.

	[BZ #14167]